# memory-card-game

./: .gitignore  CMakeLists.txt  M-C-G.cpp  MCG.cpp  Pexeso.cpp  README.md
headers/: Game.h
src/: Game.cpp
